fixed spacing between project text and buttons

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -329,6 +329,9 @@ h2 {
 }
 .projectDescription {
   width: 100%;
+  .technologies{
+    margin-bottom: 40px;
+  }
   button {
     margin-bottom: 5px;
     padding: 10px;
